# samplit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/samplit/: create_custom_jamendo_lines.py  create_jamendo_model_answers.py  jamendo_create_custom_lines.py  jamendo_create_model_answers.py  jamendo_evaluate_model_lines.py  jamendo_evaluation_df.py  jamendo_evaluation_plots.py  pipeline_functions.py  streamlit_app.py
src/samplit/data/: strings.py  utils.py
