[project]
name = "samplit"
version = "0.2.0"
requires-python = "== 3.10.11"
description = "Sampling audio from natural language prompts."
authors = [{ name = "Iacopo Scandale", email = "iacopo.scandale.is@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"

dependencies = [
  "protobuf==3.20.3",
  "numpy==1.26.0",
  "torch==2.6.0",
  "torchaudio==2.6.0",
  "torchvision==0.21.0",
  "spleeter==2.4.0",
  "phonemizer==3.3.0",
  "python-Levenshtein==0.26.1",
  "openai-whisper==20240930",
  "streamlit==1.42.1",
  "transformers==4.49.0",
  "sentence-transformers==3.4.1",
  "ipykernel==6.29",
  "pandas==1.5.3",
  "matplotlib==3.10.1",
  "seaborn==0.13.2",
]